// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the-sidebars Renders \`the-sidebars\` with type: alarm-settings 1`] = `
<side-bar-wrapper-stub>
  <alarm-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: context-settings 1`] = `
<side-bar-wrapper-stub>
  <context-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: counter-settings 1`] = `
<side-bar-wrapper-stub>
  <counter-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: service-weather-settings 1`] = `
<side-bar-wrapper-stub>
  <service-weather-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: stats-calendar-settings 1`] = `
<side-bar-wrapper-stub>
  <stats-calendar-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: stats-curves-settings 1`] = `
<side-bar-wrapper-stub>
  <stats-curves-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: stats-histogram-settings 1`] = `
<side-bar-wrapper-stub>
  <stats-histogram-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: stats-number-settings 1`] = `
<side-bar-wrapper-stub>
  <stats-number-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: stats-pareto-settings 1`] = `
<side-bar-wrapper-stub>
  <stats-pareto-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: stats-table-settings 1`] = `
<side-bar-wrapper-stub>
  <stats-table-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: testing-weather-settings 1`] = `
<side-bar-wrapper-stub>
  <testing-weather-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;

exports[`the-sidebars Renders \`the-sidebars\` with type: text-settings 1`] = `
<side-bar-wrapper-stub>
  <text-settings-stub
    config="[object Object]"
  />
</side-bar-wrapper-stub>
`;
